--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="zh-CN">
 
 <head>
+    <!-- 修改 viewport 设置 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Kindle天气台历</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta http-equiv="pragma" content="no-cache">
