--- a/config.html
+++ b/config.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Kindle WeatherCN 参数设置</title>
+    <title>Kindle Weather 参数设置</title>
     <style>
         h1 {
             text-align: center;
